--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
+# Example .env file. Create a file called ".env" and place your variabled there
 DATABASE_URL=postgresql://USERNAME:PASSWORD@localhost:5432/DB_NAME
 DEBUG=True
-LOGIN2_KEY=super_secret
+LOGIN_KEY=super_secret
 S3_BUCKET_NAME=dsekt-cashflow-dev
 S3_ACCESS_KEY_ID=super_secret
 S3_SECRET_ACCESS_KEY=super_secret
