Create a single send_mail function

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ S3_SECRET_ACCESS_KEY=super_secret
 S3_USE_SIGV4=True
 S3_HOST=s3.eu-west-1.amazonaws.com
 SPAM_API_KEY=super_secret
+SEND_EMAILS=True
