--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "==1.11.15"
+django = "==1.11.17"
 requests = "==2.13.0"
 psycopg2 = "==2.7.5"
 djangorestframework = "==3.6.2"
@@ -17,9 +17,11 @@ django-queued-storage = "==0.8.0"
 django-storages = "==1.6.6"
 boto = "==2.49.0"
 raven = "*"
+celery = "==4.4.2"
+importlib-metadata = "<5.0"
 
 [dev-packages]
 django-extensions = "*"
 
 [requires]
-python_version = "3.6"
+python_version = "3.7"
