Use the file system to store files in debug mode

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,7 @@
 DATABASE_URL=postgresql://USERNAME:PASSWORD@localhost:5432/DB_NAME
 DEBUG=True
 LOGIN_KEY=super_secret
-S3_BUCKET_NAME=dsekt-cashflow-dev
-S3_ACCESS_KEY_ID=super_secret
-S3_SECRET_ACCESS_KEY=super_secret
-S3_USE_SIGV4=True
-S3_HOST=s3.eu-west-1.amazonaws.com
 SPAM_API_KEY=super_secret
 SEND_EMAILS=True
+PLS_URL=https://pls.datasektionen.se
+LOGIN_URL=https://login.datasektionen.se
