--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "==1.11.15"
+django = "*"
 requests = "==2.13.0"
 psycopg2 = "==2.7.5"
 djangorestframework = "==3.6.2"
@@ -22,4 +22,4 @@ raven = "*"
 django-extensions = "*"
 
 [requires]
-python_version = "3.6"
+python_version = "3.7"
