--- a/Pipfile
+++ b/Pipfile
@@ -4,22 +4,19 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+django-widget-tweaks = "*"
 django = "*"
-requests = "==2.13.0"
-psycopg2 = "==2.7.5"
-djangorestframework = "==3.6.2"
-django-cors-headers = "==2.4.0"
-gunicorn = "==19.9.0"
-django-widget-tweaks = "==1.4.2"
-dj-database-url = "==0.5.0"
-whitenoise = "==3.3.1"
-django-queued-storage = "==0.8.0"
-django-storages = "==1.6.6"
-boto = "==2.49.0"
 raven = "*"
+whitenoise = "*"
+psycopg2 = "*"
+django-cors-headers = "*"
+requests = "*"
+dj-database-url = "*"
+django-queued-storage = "*"
+djangorestframework = "*"
+django-storages = "*"
 
 [dev-packages]
-django-extensions = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.11"
