Separate config for url to login's frontend and backend
Also added a tiny guide on getting prod data locally

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,5 @@ LOGIN_KEY=super_secret
 SPAM_API_KEY=super_secret
 SEND_EMAILS=True
 PLS_URL=https://pls.datasektionen.se
-LOGIN_URL=https://login.datasektionen.se
+LOGIN_API_URL=https://login.datasektionen.se
+LOGIN_FRONTEND_URL=https://login.datasektionen.se
