--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,9 @@ django-queued-storage = "==0.8.0"
 django-storages = "==1.6.6"
 boto = "==2.49.0"
 raven = "*"
+celery = "==4.2.1"
+pi-heif = "==0.9.0"
+pillow = "==8.4.0"
 
 [dev-packages]
 django-extensions = "*"
