use transaction when creating expenses

--- a/compose.yaml
+++ b/compose.yaml
@@ -25,6 +25,9 @@ services:
         - path: Pipfile
           action: rebuild
     command: sh -c "pipenv run ./manage.py migrate && pipenv run ./manage.py runserver 0.0.0.0:8000"
+    depends_on:
+      db:
+        condition: service_healthy
   db:
     image: postgres:14
     environment:
