--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,6 @@ DEBUG=True
 LOGIN_KEY=super_secret
 SPAM_API_KEY=super_secret
 SEND_EMAILS=True
-PLS_URL=https://pls.datasektionen.se
+HIVE_URL=https://hive.datasektionen.se
 LOGIN_API_URL=https://login.datasektionen.se
 LOGIN_FRONTEND_URL=https://login.datasektionen.se
