authenticate to Hive using API token secret

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,6 @@ LOGIN_KEY=super_secret
 SPAM_API_KEY=super_secret
 SEND_EMAILS=True
 HIVE_URL=https://hive.datasektionen.se
+HIVE_SECRET=api_token_secret
 LOGIN_API_URL=https://login.datasektionen.se
 LOGIN_FRONTEND_URL=https://login.datasektionen.se
