--- a/compose.yaml
+++ b/compose.yaml
@@ -8,6 +8,7 @@ services:
       SPAM_API_KEY: super_secret
       SEND_EMAILS: "False"
       HIVE_URL: https://hive.datasektionen.se
+      HIVE_SECRET: api_token_secret
       LOGIN_API_URL: http://login:7002
       LOGIN_FRONTEND_URL: http://localhost:7002
       PYTHONUNBUFFERED: 1
