--- a/compose.yaml
+++ b/compose.yaml
@@ -7,7 +7,8 @@ services:
       LOGIN_KEY: super_secret
       SPAM_API_KEY: super_secret
       SEND_EMAILS: "False"
-      PLS_URL: https://pls.datasektionen.se
+      HIVE_URL: https://hive.datasektionen.se
+      HIVE_SECRET: api_token_secret
       LOGIN_API_URL: http://login:7002
       LOGIN_FRONTEND_URL: http://localhost:7002
       PYTHONUNBUFFERED: 1
@@ -44,6 +45,6 @@ services:
     ports:
       - 7002:7002
     environment:
-      # Since we're using the real pls, it's nice to use some user with a lot of privileges. Putting
-      # Melvin here since he's treasurer at the time of writing.
-      KTH_ID: melvinj
+      # Since we're using the real Hive, it's nice to use some user with a lot of privileges. Putting
+      # Lukas here since he's treasurer at the time of writing.
+      KTH_ID: lukmal
