feat: Migrate from login to sso
Migrates the used authentication provider from login to sso. This
entailed adding `authlib` as a dependency to the PIP project.

It also required adding a dev dockerfile with Nginx support. Nginx is
used to proxy nyckeln:7003, since the backend server now needs to make
requests to it.

--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ raven = "*"
 celery = "==4.2.1"
 pi-heif = "==0.9.0"
 pillow = "==8.4.0"
+authlib = "==0.15.6"
 
 [dev-packages]
 django-extensions = "*"
