Migrate from zfinger to rfinger

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ HIVE_URL=https://hive.datasektionen.se
 HIVE_SECRET=api_token_secret
 LOGIN_API_URL=https://login.datasektionen.se
 LOGIN_FRONTEND_URL=https://login.datasektionen.se
+RFINGER_API_URL=https://rfinger.datasektionen.se
+RFINGER_API_KEY=super_secret
