--- a/compose.yaml
+++ b/compose.yaml
@@ -16,6 +16,8 @@ services:
       REDIRECT_URL: http://localhost:8000/login/
       PYTHONUNBUFFERED: 1
       BUDGET_URL: https://budget.datasektionen.se
+      RFINGER_API_URL: http://dock:9003
+      RFINGER_API_KEY: hemlig
     init: true
     ports:
       - 8000:8000
@@ -46,6 +48,15 @@ services:
       interval: 2s
       timeout: 2s
       retries: 3
+  dock:
+    image: ghcr.io/datasektionen/dock:latest
+    configs:
+      - source: dock.yaml
+        target: /config.yaml
+    ports:
+      - 9001:9001
+      - 9002:9002
+      - 9003:9003
   nyckeln:
     image: ghcr.io/datasektionen/nyckeln-under-dorrmattan
     configs:
@@ -71,6 +82,25 @@ configs:
           }
         }
       }
+
+  dock.yaml:
+    content: |
+      rfinger:
+        default: http://localhost:9003
+        pictures:
+          turetek:
+            regular: https://thskth.se/wp-content/uploads/2023/06/ths-logo-bla-01-300x294-1.png
+            small: https://thskth.se/wp-content/uploads/2019/12/ths-logo-svart-01.png
+          diadat:
+            regular: https://dsekt-assets.s3.amazonaws.com/logotyp
+            small: https://dsekt-assets.s3.amazonaws.com/logotyp
+          marmed:
+            regular: https://storage.googleapis.com/medieteknik-static/static/logos/logo.webp
+            small: https://storage.googleapis.com/medieteknik-static/static/logos/logo.webp
+          karklu:
+            regular: https://dsekt-assets.s3.amazonaws.com/website/namnder/dkm.svg
+            small: https://dsekt-assets.s3.amazonaws.com/website/namnder/dkm.svg
+
   
   nyckeln.yaml:
     content: |
