build: migrate python project from pipenv to poetry

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,15 +1,14 @@
-FROM python:3.6.15-alpine
+FROM python:3.6.15
 
 ENV TZ=Europe/Stockholm
-RUN pip install pipenv
 
-RUN apk --no-cache add gcc libc-dev libffi-dev zlib-dev jpeg-dev py3-psycopg2 postgresql14-dev nginx
+RUN pip install poetry
 
 WORKDIR /app
 
-COPY Pipfile Pipfile.lock ./
+COPY pyproject.toml poetry.lock ./
 
-RUN pipenv --python 3.6 install
+RUN poetry install
 
 COPY . .
 
