--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,35 +1,41 @@
-[tool.poetry]
+[project]
 name = "cashflow"
 version = "2.0"
-description = "Django project to manage receipts and reimbursements at Datasektionen"
-# TODO: Fix authors and maintainers (?)
+description = ""
 authors = [
-	"Ture Teknolog"
+	{name = "Alexander Viklund", email = "viklu@kth.se"},
+	{name = "Mauritz Zachrisson", email="mauritzz@kth.se"}
+]
+package-mode = false
+readme = "README.md"
+requires-python = "==3.14.2"
+dependencies = [
+    "django (>=6.0.1,<7.0.0)",
+    "requests (>=2.32.5,<3.0.0)",
+    "psycopg2 (>=2.9.11,<3.0.0)",
+    "djangorestframework (>=3.16.1,<4.0.0)",
+    "django-cors-headers (>=4.9.0,<5.0.0)",
+    "gunicorn (>=23.0.0,<24.0.0)",
+    "django-widget-tweaks (==1.4.2)",
+    "dj-database-url (==0.5.0)",
+    "whitenoise (>=4,<5)",
+    "django-storages (==1.6.6)",
+    "boto (==2.49.0)",
+    "raven",
+    "celery (==4.2.1)",
+    "pi-heif (==0.9.0)",
+    "pillow (>=12.1.0,<13.0.0)",
+    "authlib (==0.15.6)",
+    "legacy-cgi (>=2.6.4,<3.0.0)",
+    "setuptools (>=80.9.0,<81.0.0)"
 ]
 
-[tool.poetry.dependencies]
-python = "^3.6"
-django = "1.11.15"
-requests = "2.13.0"
-psycopg2 = "2.7.5"
-djangorestframework = "3.6.2"
-django-cors-headers = "2.4.0"
-gunicorn = "19.9.0"
-django-widget-tweaks = "1.4.2"
-dj-database-url = "0.5.0"
-whitenoise = "3.3.1"
-django-queued-storage = "0.8.0"
-django-storages = "1.6.6"
-boto = "2.49.0"
-raven = "*"
-celery = "4.2.1"
-pi-heif = "0.9.0"
-pillow = "8.4.0"
-authlib = "0.15.6"
-
-[tool.poetry.dev-dependencies]
-django-extensions = "*"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[dependency-groups]
+dev = [
+    "django-extensions"
+]
