--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,13 +1,14 @@
-FROM python:3.14.2
+FROM python:3.14.2-alpine
 
 ENV TZ=Europe/Stockholm
 
 RUN pip install poetry
 
+RUN apk --no-cache add build-base libpq libpq-dev py3-psycopg2 nginx
+
 WORKDIR /app
 
 COPY pyproject.toml poetry.lock ./
-
 
 COPY . .
 
