--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,6 @@
 services:
   app:
-    build:
-      dockerfile: ./Dockerfile.dev
+    build: .
     environment:
       DATABASE_URL: postgresql://cashflow:cashflow@db:5432/cashflow
       DEBUG: "True"
@@ -18,6 +17,7 @@ services:
       BUDGET_URL: https://budget.datasektionen.se
       RFINGER_API_URL: http://dock:9003
       RFINGER_API_KEY: hemlig
+    command: /app/run.sh
     init: true
     ports:
       - 8000:8000
