install poetry using apk instead of pip; don't install nginx in prod container

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,7 @@
 services:
   app:
-    build: .
+    build:
+      target: dev
     environment:
       DATABASE_URL: postgresql://cashflow:cashflow@db:5432/cashflow
       DEBUG: "True"
