--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,8 @@ dependencies = [
     "django-widget-tweaks (==1.4.2)",
     "dj-database-url (==0.5.0)",
     "whitenoise (>=4,<5)",
-    "django-storages (==1.6.6)",
-    "boto (==2.49.0)",
+    "django-storages (==1.14.6)",
+    "boto3 (==1.42.30)",
     "raven",
     "celery (==4.2.1)",
     "pi-heif (==0.9.0)",
