--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,13 +20,13 @@ dependencies = [
     "dj-database-url (>=3.1.0,<4.0.0)",
     "whitenoise (>=6.11.0,<7.0.0)",
     "django-storages (>=1.14.6,<2.0.0)",
-    "boto (>=2.49.0,<3.0.0)",
     "celery (>=5.6.2,<6.0.0)",
     "pi-heif (>=1.1.1,<2.0.0)",
     "pillow (>=12.1.0,<13.0.0)",
     "authlib (>=1.6.6,<2.0.0)",
     "legacy-cgi (>=2.6.4,<3.0.0)",
-    "setuptools (>=80.9.0,<81.0.0)"
+    "setuptools (>=80.9.0,<81.0.0)",
+    "boto3 (>=1.42.34,<2.0.0)"
 ]
 
 
