--- a/compose.yaml
+++ b/compose.yaml
@@ -127,6 +127,36 @@ configs:
           hive_tags:
             - id: personal_email
               content: turetek@gmail.com
+          
+        - ug_kth_id: some-id
+          kth_id: lukmal
+          email: lukmal@kth.se
+          first_name: Lukas
+          family_name: Malmberg
+          pls_permissions:
+            sso:
+              - admin
+            calypso:
+              - drek
+              - dfunk
+          hive_tags:
+            - id: personal_email
+              content: lukmal@datasektionen.se
+
+        - ug_kth_id: some-id
+          kth_id: sbalter
+          email: sbalter@kth.se
+          first_name: Sofie
+          family_name: Bälter
+          pls_permissions:
+            sso:
+              - admin
+            calypso:
+              - drek
+              - dfunk
+          hive_tags:
+            - id: personal_email
+              content: sbalter@datasektionen.se
 
       hive:
         tokens:
@@ -163,3 +193,32 @@ configs:
                 scope: null
               - id: view-all-payments
                 scope: null
+
+
+          - name: Kassör
+            id: kassor
+            domain: example.com
+            members:
+              - lukmal
+              - sbalter
+            permissions: 
+              - id: accounting
+                scope: "*"
+              - id: attest
+                scope: "*"
+              - id: confirm
+                scope: "*"
+              - id: delete
+                scope: "*" 
+              - id: edit-invoice
+                scope: "*"
+              - id: moderate-comments
+                scope: "*"
+              - id: pay
+                scope: "*"
+              - id: unattest
+                scope: "*"
+              - id: unconfirm
+                scope: "*"
+              - id: view-all-payments
+                scope: "*"
