wip: API response validation using pydantic
# Conflicts:
#	poetry.lock
#	pyproject.toml

--- a/compose.yaml
+++ b/compose.yaml
@@ -2,6 +2,7 @@ services:
   app:
     build:
       target: dev
+    env_file: .env
     environment:
       DATABASE_URL: postgresql://cashflow:cashflow@db:5432/cashflow
       DEBUG: "True"
