--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ dependencies = [
     "authlib (>=1.6.6,<2.0.0)",
     "legacy-cgi (>=2.6.4,<3.0.0)",
     "setuptools (>=80.9.0,<81.0.0)",
+    "pydantic (>=2.12.5,<3.0.0)",
+    "setuptools (>=80.9.0,<81.0.0)",
     "boto3 (>=1.42.34,<2.0.0)"
 ]
 
