feat(fortnox): add user info API call and token refreshing

--- a/compose.yaml
+++ b/compose.yaml
@@ -192,3 +192,5 @@ configs:
                 scope: "*"
               - id: view-all-payments
                 scope: "*"
+              - id: attest-firmatecknare
+                scope: "*"
