--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ dependencies = [
     "setuptools (>=80.9.0,<81.0.0)",
     "pydantic (>=2.12.5,<3.0.0)",
     "setuptools (>=80.9.0,<81.0.0)",
-    "boto3 (>=1.42.34,<2.0.0)"
+    "boto3 (>=1.42.34,<2.0.0)",
+    "requests-cache (>=1.3.0,<2.0.0)"
 ]
 
 
